* minimum spanning network functions gain the ability to collapse multilocus genotypes by genetic distance with the option `threshold`.
* `informloci` gains the argument "MAF", which allows the specificatin of a minor allele frequency cutoff in addition to the cutoff argument. Examples have been updated.

NEW FUNCTIONS
* `mlg.filter` will contract multilocus genotypes given a genetic distance and threshold using one of three algorithms. It can report statistics such as the multilocus genotypes returned, the number of samples within each multilocus genotype, the thresholds at which multilocus genotypes were collapsed, and the genetic distance matrix that represents the new multilocus genotypes.
* `bitwise.dist` can efficiently calculate absolute genetic distance for genlight objects. 
* `mll` "multilocus lineages" is a new replacement for `mlg.vector` which gains the functionality of selecting the multilocus genotype definition from the mlg slot.
* `nmll` counts the number of multilocus lineages
* `mll.custom` allows the user to define custom multilocus genotypes.
* `mll.levels` allows the user to edit the names of custom multilocus genotypes.
* `poppr_has_parallel` will return `TRUE` if poppr was built with OpenMP parallel library.
* `win.ia` calculates windows of \bar{r}_d along genlight chromosomes.
* `samp.ia` calculates \bar{r}_d for genlight object by ranomly sampling a user-defined number of SNPs.
* `test_replen` will test repeat lengths of microsatellite markers for consistency.
* `fix_replen` will fix inconsistent repeat lengths for microsatellite markers.

NEW CLASSES
* snpclone is an extension of the genlight object that acts very much like genclone. It contains an mlg slot. 
* MLG is an internal class that lives inside the mlg slot of snpclone and genclone objects. It allows the user to easily switch between multilocus genotype definitions.

BUG FIX
* Fixed internal bug for `fix_negative_branch` when only one branch had a negative edge.